# yanqwq

./: README.md
shell/: avoid.sh  circle.sh  setup_px4_env.sh
src/complete_mission/: CMakeLists.txt  package.xml
src/complete_mission/config/: circle.yaml
src/complete_mission/include/: implement.hpp
src/complete_mission/launch/: avoid.launch  circle.launch  implement.launch
src/complete_mission/msg/: Position.msg  command.msg
src/complete_mission/src/: avoid.cpp  circle.cpp  implement (copy).cpp  implement.cpp
src/simulation/: package.xml
src/simulation/launch/: iris.launch  iris_rplidar.launch
src/simulation/world/: task.world  test.world
